--- a/apps/wallet-mobile/src/i18n/locales/pl-PL.json
+++ b/apps/wallet-mobile/src/i18n/locales/pl-PL.json
@@ -148,8 +148,8 @@
   "swap.swapScreen.eachVerifiedToken": "Each verified tokens gets",
   "swap.swapScreen.verifiedBadge": "verified badge",
   "swap.swapScreen.verifiedBy": "Verified by {pool}",
-  "swap.swapScreen.transactionSigned": "Transaction signed",
-  "swap.swapScreen.transactionDisplay": "Your transactions will be displayed both in the list of transaction and Open swap orders",
+  "swap.swapScreen.transactionSigned": "Transaction submitted",
+  "swap.swapScreen.transactionDisplay": "In a few minutes, your transactions will be displayed both in the list of transaction and Open swap orders",
   "swap.swapScreen.poolVerificationInfo": "Cardano projects that list their own tokens can apply for an additional {pool} verification. This verification is a manual validation that {pool} team performs with the help of Cardano Foundation.",
   "swap.swapScreen.poolFee": "DEX Fee",
   "swap.swapScreen.assetsIn": "This asset is in my portfolio",
