--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -158,12 +158,13 @@
   "swap.swapScreen.defaultSlippage": "Default Slippage Tolerance",
   "swap.swapScreen.slippageInfo": "Slippage tolerance is set as a percentage of the total swap value. Your transactions will not be executed if the price moves by more than this amount.",
   "swap.swapScreen.autoPool": "(auto)",
-  "swap.swapScreen.changePool": "change pool",
+  "swap.swapScreen.changePool": "change dex",
   "swap.swapScreen.swapMinAda": "Min-ADA is the minimum ADA amount required to be contained when holding or sending Cardano native assets.",
   "swap.swapScreen.swapMinAdaTitle": "Min ADA",
   "swap.swapScreen.swapFees": "Swap fees include the following:\n • Matchmaker Fee\n • Frontend Fee",
   "swap.swapScreen.swapFeesTitle": "Fees",
-  "swap.swapScreen.swapLiquidityFee": "Liquidity provider fee ({fee}%)",
+  "swap.swapScreen.swapLiquidityFee": "Liq. prov. fee",
+  "swap.swapScreen.swapLiquidityFeeInfo": "Liquidity provider fee is a fixed {fee}% operational fee from the whole transaction volume, that is taken to support DEX “liquidity” allowing traders to buy and sell assets on the decentralized Cardano network.",
   "swap.swapScreen.swapMinReceived": "Minimum amount of assets you can get because of the slippage tolerance.",
   "swap.swapScreen.swapMinReceivedTitle": "Min Received",
   "swap.swapScreen.enterSlippage": "Enter a value from 0% to 100%. You can also enter up to 1 decimal",
