--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -161,9 +161,10 @@
   "swap.swapScreen.changePool": "change dex",
   "swap.swapScreen.swapMinAda": "Min-ADA is the minimum ADA amount required to be contained when holding or sending Cardano native assets.",
   "swap.swapScreen.swapMinAdaTitle": "Min ADA",
-  "swap.swapScreen.swapFees": "Swap fees include the following:\n • Matchmaker Fee\n • Frontend Fee",
+  "swap.swapScreen.swapFees": "Swap fees include the following:\n • DEX Fee\n • Frontend Fee",
   "swap.swapScreen.swapFeesTitle": "Fees",
-  "swap.swapScreen.swapLiquidityFee": "Liq. prov. fee",
+  "swap.swapScreen.swapLiqProvFee": "Liq. prov. fee",
+  "swap.swapScreen.swapLiquidityFee": "Liquidity provider fee",
   "swap.swapScreen.swapLiquidityFeeInfo": "Liquidity provider fee is a fixed {fee}% operational fee from the whole transaction volume, that is taken to support DEX “liquidity” allowing traders to buy and sell assets on the decentralized Cardano network.",
   "swap.swapScreen.swapMinReceived": "Minimum amount of assets you can get because of the slippage tolerance.",
   "swap.swapScreen.swapMinReceivedTitle": "Min Received",
@@ -185,7 +186,8 @@
   "swap.listOrders.sheet.back": "Back",
   "swap.listOrders.total": "Total",
   "swap.listOrders.liquidityPool": "Liquidity Pool",
-  "swap.listOrders.timeCreated": "Time Created",
+  "swap.listOrders.timeCreated": "Time created",
+  "swap.listOrders.timeCompleted": "Time completed",
   "swap.listOrders.txId": "Transaction ID",
   "swap.swapScreen.limitPriceWarningTitle": "Limit price",
   "swap.swapScreen.limitPriceWarningDescription": "Are you sure you want to proceed this order with the limit price that is 10% or more higher than the market price?",
